* XXX XXX XX XXXX XX:XX:XX +0000 Manvendra Bhangui <@email@> @release@-@version@%{?dist}
Release @version@-@release@ Start 27/04/2023 End XX/XX/XXXX
======= Release Highlights ================================================
===========================================================================
- 08/07/2023
01. tcpclient.c, dotls.c: use strerr_tls for tls errors

* Sun Apr 23 2023 17:50:00 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.2-1.1%{?dist}
Release 1.1.2-1.1 Start 13/02/2023 End 23/04/2023
======= Release Highlights ================================================
o ability to pass username or uid in -u option
o ability to pass multiple groups to -g
===========================================================================
- 13/02/2023
01. dotls.c, tcpserver.c: added error message for tls_init failure
02. tcpclient.c: added error message for tls_init, tls_session failures
03. tcpserver.c: allow both user and uid to be passed to -u option. 
    passing user enables setting of supplementary groups
- 20/02/2023
04. tcpserver.c: add additional groups as a comma separated
    groups to -g
- 08/03/2023
05. tcpclient.c: refactored wait handling
- 01/04/2023
06. load_mysql.c: refactored getlibObject() function
- 08/04/2023
07. tcpserver.c: fixed status not getting printed
- 23/04/2023 - indimail-mta-3.0.3

* Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.1-1.1%{?dist}
Release 1.1.1 Start 18/09/2022 End 30/01/2023
======= Release Highlights ================================================
o tcpserver, tcpclient, dotls: option to load ciphers from file
o tcpclient, tcpserver, dotls: set TLS_PROVIDER env variable for qmail-smtpd
  to insert into received header
o use tls functions from libqmail
===========================================================================
- 18/09/2022
01.  instcheck.in: use uininstaller only for ucspi-tcp
- 23/11/2022
02.  load_mysql.c: renamed mysql_lib to libmysql
- 13/12/2022