@@ -156,9 +156,10 @@ when using TLS/SSL.
 
 .TP
 -\fBf\fR \fIcipher_list\fR
-Use ciphers listed in \fIcipher_list\fR file. Without this \fBtcpclient\fR
-uses TLS_CIPHER_LIST environment variable if set or system configured
-PROFILE=SYSTEM ciphers.
+Use ciphers listed in \fIcipher_list\fR. Without this \fBtcpclient\fR uses
+TLS_CIPHER_LIST environment variable if set (or system configured
+PROFILE=SYSTEM ciphers for TLSv1.2 and below). For TLSv1.3 the environment
+variable TLS_CIPHER_SUITE is used instead. See openssl-ciphers(1ossl).
 
 .TP
 -\fBM\fR \fItls_method\fR
@@ -309,6 +310,7 @@ finger@(1),
 http@(1),
 tcpcat(1),
 mconnect(1),
-tcp-environ(5)
+tcp-environ(5),
+openssl-ciphers(1ossl).
 
 http://cr.yp.to/ucspi-tcp.html
