@@ -4,6 +4,9 @@ Release @version@-@release@ Start 27/04/2023 End XX/XX/XXXX
 ===========================================================================
 - 08/07/2023
 01. tcpclient.c, dotls.c: use strerr_tls for tls errors
+- 19/08/2023
+02. tcpclient.c, dotls.c, tcpserver.c: use TLS_CIPHER_LIST, TLS_CIPHER_SUITE
+    to set ciphers
 
 * Sun Apr 23 2023 17:50:00 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 13/02/2023 End 23/04/2023
